# garden_watering

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
nodes/arduino-slave/: slave.ino
nodes/arduino-slave/includes/: Radio.h  settings.h
nodes/includes/: Radio.h  names.h
nodes/master/: master.ino
nodes/slave/: slave.ino
src/includes/: Radio.h  names.h
src/includes_rpi/: Radio.h  names.h
src/master/: master.ino
src/slave/: slave.ino
